# singlecell-annotator

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
annotator/: settings.py  urls.py
annotator/settings/: base.py  local.py  prod.py
singlecell/: admin.py  apps.py  forms.py  models.py  views.py
singlecell/management/commands/: export_annotations.py  import_segmentations.py
singlecell/migrations/: 0001_initial.py  0002_auto_20200513_1426.py  0003_auto_20200513_1533.py  0004_auto_20200513_1815.py  0005_alter_annotation_label.py  0006_annotation_bbox_annotation_scene_annotation_tile_and_more.py  0007_alter_annotation_label.py  0008_dataset_indices_alter_annotation_label.py  0009_remove_annotation_label_label.py  0010_alter_label_label.py  0011_alter_label_label.py
singlecell/templates/singlecell/: index.html
theme/static_src/: package-lock.json  package.json  tailwind.config.js
theme/templates/: base.html
