[metadata]
name = singlecell annotator
description = Manual annotation web app for single cell microscopy images.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-only
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    tqdm
    Django
    Pillow
    django-tailwind
    pyarrow
    pandas
    aicsimageio
    aicspylibczi
